# HSE-Course

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  README.md
.github/workflows/: ci.yml
docs/: submitting.md
homework/Allocator/: task.md
homework/Allocator/src/allocator/: CMakeLists.txt  allocator.h
homework/BigInteger/: CMakeLists.txt
homework/Geometry/: CMakeLists.txt  tests.cpp
homework/Geometry/hierarchy/: CMakeLists.txt
homework/List/: list.cpp  task.md  tests.cpp
homework/Optional/: optional.h  task.md  tests.cpp
homework/SharedPointer/: task.md  tests.cpp
homework/TypeList/: task.md
homework/TypeList/typelist/: CMakeLists.txt  append.h  eraseall.h  length.h  noduplicates.h  typeat.h
homework/TypeTraits/: CMakeLists.txt  task.md  tests.cpp
homework/TypeTraits/type_traits/: CMakeLists.txt
homework/Variant/: task.md  tests.cpp
module-1/Builder/: Builder.cpp
module-1/homework/Allocator/: CMakeLists.txt  task.md  tests.cpp
module-1/homework/Allocator/src/list/: CMakeLists.txt  list.h
module-1/homework/Allocators/: CMakeLists.txt  task.md
module-1/homework/BigInteger/: .gitignore  BigInteger.cpp  BigInteger.h  CMakeLists.txt  biginteger.cpp  biginteger.h  task.md  tests.cpp  unit_tests.cpp  unsigned_biginteger.cpp  unsigned_biginteger.h
module-1/homework/Geometry/: task.md  tests.cpp
module-1/homework/List/: CMakeLists.txt  a.out  list.cpp  list.h  task.md  tests.cpp  tt.cpp
module-1/homework/Optional/: CMakeLists.txt  optional.h  task.md  tests.cpp
module-1/homework/SharedPointer/: CMakeLists.txt  task.md  tests.cpp
module-1/homework/SharedPointer/src/shared_ptr/: CMakeLists.txt  shared_ptr.h
module-1/homework/TypeList/: CMakeLists.txt  task.md  tests.cpp
module-1/homework/TypeList/typelist/: CMakeLists.txt  Makefile  append.h  cmake_install.cmake  count.h  erase.h  eraseall.h  indexof.h  length.h  noduplicates.h  replace.h  reverse.h  typeat.h  typelist.h
module-1/homework/TypeTraits/: CMakeLists.txt  task.md  tests.cpp
module-1/homework/Variant/: CMakeLists.txt  task.md  tests.cpp  variant.h
module-1/seminars/seminar1/integral/: CMakeLists.txt  bitwise_operation.cpp  complement_code.cpp  overflow.cpp
module-1/seminars/seminar10/: CMakeLists.txt
module-1/seminars/seminar10/local_classes/: CMakeLists.txt  local_classes.cpp
module-1/seminars/seminar10/type_selection/: CMakeLists.txt  generic.cpp  naive.cpp
module-1/seminars/seminar10/type_traits/: is_fundamental.cpp
module-1/seminars/seminar17/: grim.cpp
module-1/seminars/seminar2/: CMakeLists.txt  fib.cpp  game.cpp  integer.cpp
module-1/seminars/seminar22/: 1_struct.cpp  CMakeLists.txt
module-1/seminars/seminar23/: 0_min_element.cpp  10_min_element_requirements_extraction.cpp  12_min_element_concept_implementation.cpp  13_min_element_concept_alternative_impl.cpp  14_overconstraining_overgeneralizing.cpp  15_what_we_can_constrain.cpp  1_min_element.cpp  2_min_element_ptr.cpp  9_operations_for _concept.cpp  intro.cpp
module-1/seminars/seminar3/: README.md
module-1/seminars/seminar5/: README.md
module-1/seminars/seminar8/: CMakeLists.txt
module-1/seminars/seminar9/: CMakeLists.txt
module-1/seminars/seminar9/index_of/: CMakeLists.txt
module-1/seminars/seminar9/int2type/: int2type.cpp
module-1/seminars/seminar9/type2type/: type2type_1.cpp  type2type_2.cpp
seminars/seminar1/: CMakeLists.txt
seminars/seminar1/float_point/: CMakeLists.txt  representation.cpp
seminars/seminar1/integral/: CMakeLists.txt  bitwise_operation.cpp  complement_code.cpp  overflow.cpp
seminars/seminar1/io/: CMakeLists.txt  io.cpp
seminars/seminar10/: CMakeLists.txt
seminars/seminar10/convertibility/: CMakeLists.txt  convertibility.cpp
seminars/seminar10/type_traits/: CMakeLists.txt  is_ptr.cpp
seminars/seminar11/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
seminars/seminar12/: 1.cpp  10.cpp  2.cpp  3.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  bar_overloading_const_lvalue.cpp  bar_overloading_const_prvalue.cpp  bar_overloading_lvalue.cpp  bar_overloading_non_const_lvalue.cpp  bar_overloading_non_const_prvalue.cpp  bar_overloading_prvalue.cpp  const_container.cpp  make_unique_forward_5.cpp  make_unique_lvalue_ref_const_template.cpp  make_unique_lvalue_ref_const_template_0.cpp  make_unique_lvalue_ref_template.cpp  make_unique_lvalue_ref_template_1.cpp  make_unique_non_ref_template.cpp  make_unique_non_ref_template_2.cpp  make_unique_universal_ref.cpp  make_unique_universal_ref_3.cpp  make_unique_universal_ref_rval_lval_problem.cpp  make_unique_universal_ref_rval_lval_problem_4.cpp
seminars/seminar13/: CMakeLists.txt
seminars/seminar13/exception/: CMakeLists.txt  function_try_block.cpp
seminars/seminar13/variadic/: CMakeLists.txt  array.cpp
seminars/seminar16/unique_ptr/: CMakeLists.txt  unique_ptr.cpp
seminars/seminar16/variant/: variant.cpp
seminars/seminar17/: CMakeLists.txt
seminars/seminar18/decltype/: 1.cpp  3.cpp  inspect_value_category.cpp
seminars/seminar18/is_constructible/: delete.cpp
seminars/seminar18/lambdas/: CMakeLists.txt  capturing_reference_11.cpp  contains_title_copy_9.cpp  operator_overloading_6.cpp  overloading_2.cpp  puzzle_13.cpp  template_3.cpp
seminars/seminar19/lambda_abi/: main.cpp  shelf.cpp
seminars/seminar19/lambda_template_abi_fail/: shelf.cpp
seminars/seminar19/lambdas/: Plus_template_operator_1.cpp  accept_lambdas_8.cpp  (+3 more)
seminars/seminar2/: CMakeLists.txt  integer.cpp
seminars/seminar22/: 0_consexpr_function.cpp  0_constant_expressions.cpp  0_constexpr_variable.cpp  2_core_f4.cpp
seminars/seminar23/: 11_min_element_concepts_extraction.cpp  16_specializations.cpp  4_min_element_auto.cpp  5_min_element_template_parameter.cpp  6_vector_ref.cpp  7_syntactic_semantic_requirements.cpp  8_language_construction.cpp
seminars/seminar3/: README.md
seminars/seminar4/: README.md
seminars/seminar5/: README.md
seminars/seminar6-8/: README.md  mediator.cpp  observer.cpp  prototype.cpp
seminars/seminar9/: CMakeLists.txt
(+128 files in other folders)
